2000-04-27  Ettore Perazzoli  <ettore@helixcode.com>

	* folder-browser-factory.c: New macro `CONTROL_FACTORY_ID', which
	is #defined to a different value according to whether we are
	`USING_OAF' or not.
	(folder_browser_factory_init): Use `CONTROL_FACTORY_ID'.

	* test-mail.c
	(init_corba): New helper function, implemented differently
	according to `USING_OAF'.
	(main): Use `init_corba()'.

	* main.c
	(init_corba): New helper function, implemented differently
	according to `USING_OAF'.
	(init_bonobo): Use `init_corba()'.

	* Makefile.am: Install OAF stuff if `USING_OAF'.  Add
	`-I$(datadir)/idl' to the `orbit-idl' command-line so that we can
	use Bonobo IDL files installed under our prefix as well.  Also,
	use `$(ORBIT_IDL)' instead of hardcoded `orbit-idl'.

	* evolution-mail.oafinfo: New file.

2000-04-27  Dan Winship  <danw@helixcode.com>

	* mail-format.c: Move text_to_html to e-util.

	* mail-ops.c (send_to_url): New routine. Thin wrapper for
	e_msg_composer_new_from_url.

	* mail-display.c (on_link_clicked): print a warning for news or
	nntp URLs (which we'll deal with some day), and call send_to_url
	for mailto URLs.

	* mail-format.c (text_to_html): Improve URL conversion code.
	Recognize https, recognize "www\..*" without a prefixed "http://".
	Properly escape &, <, >, etc in URL strings. Don't be fooled by
	"mailto:", "http://", etc with no following data.

2000-04-26  Dan Winship  <danw@helixcode.com>

	* mail-format.c (text_to_html): Reorganize a bit and add a new
	flag, TEXT_TO_HTML_CONVERT_URLS to recognize and wrap URLs
	in text.

	* mail-display.c (mail_html_new): Add link_clicked signal handler.
	(on_link_clicked): Use gnome_url_show to launch a browser.

	* mail-format.c: update for CamelStream changes. Update for
	CamelMimeBodyPart -> CamelMimePart

2000-04-25  Dan Winship  <danw@helixcode.com>

	* mail-display.c, mail-format.c: Redo large chunks of this. The
	mail display now consists of a vbox in a scrolled window, in which